--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 // (very simple for GitHub Pages)
 const apkFiles = [
     "music.apk",
-    "video.apk",
-    "game.apk"
+    "_Vibration_meter_19302095.apk"
 ];
 
 const listDiv = document.getElementById("apkList");
